# codebot-ai

./: .agent-guardrails.json  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  snake.py  tsconfig.json
.claude/: GAME_PLAN.md  launch.json  next-builds.md
codeagi/: .env.example  .gitignore  ARCHITECTURE.md  EVALS.md  README.md  STORAGE.md  TRUTH.md  V0.md  pyproject.toml  setup.py
codeagi/.github/workflows/: ci.yml
codeagi/codeagi/: __init__.py  __main__.py
codeagi/codeagi/action/: __init__.py  executor.py
codeagi/codeagi/adapters/: tool_adapter.py
codeagi/codeagi/config/: defaults.json
codeagi/codeagi/core/: executive.py  loop.py  mission.py  scheduler.py  state.py
codeagi/codeagi/evals/: autonomy.py  benchmarks.py  repo_runner.py
codeagi/codeagi/interfaces/: cli.py  doctor.py
codeagi/codeagi/learning/: consolidation.py  reflection.py  semantic.py
codeagi/codeagi/memory/: working_memory.py
codeagi/codeagi/reasoning/: critic.py  planner.py  verifier.py
codeagi/codeagi/safety/: policy.py
codeagi/codeagi/storage/: event_log.py  integrity.py  manager.py  manifest.py  paths.py  runtime_state.py
codeagi/codeagi/utils/: config.py  logging.py
codeagi/codeagi/world/: __init__.py  model.py
codeagi/tests/: test_cli.py  test_cognition.py  test_doctor.py  test_eval_cli.py  test_executor.py  test_missions.py  test_policy.py  test_repo_runner.py  test_storage.py
docs/: ARCHITECTURE.md  BRANDING.md  CODE_QUALITY_AUDIT_2026-05-05.md  INSTALL.md  (+13 more)
(+384 files in other folders)
